css/base.css
/* -- Base Style -- */

html {
  box-sizing:  border-box;
  font-family: Arial, Helvetica, sans-serif;
  font-size:   18px;
  color:       #555;
}

*,
*:before,
*:after {
  box-sizing: inherit;
  margin:     0px;
  padding:    0px;
}

body {
  padding:          10vh 10vw;
  background-color: #536653;
}

@media screen and (max-width: 800px) {
  body {
    height:  100vh;
    padding: 3vw 3vw;
  }
}

